media quieres changes

--- a/events-availability.html
+++ b/events-availability.html
@@ -43,62 +43,62 @@
             <h2 class="uppercase title-3">upcoming Events</h2>
         </div>
         <div class="row events-bg margin ">
-            <p class="intro">We have events planned for the follwing dates and venues</p>
-            <div class="events-list-bg events">
+            <p class="intro added-margin">We have events planned for the follwing dates and venues</p>
+            <div class="events">
                 <ul class="events-list bg-transparent margin">
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">London</div>
+                        <div class="in-line margin col-xs-4">London</div>
                         <div class="sold-out in-line margin col-xs-4">-SOLD OUT-</div>
-                        <div class="events-date in-line margin col-xs-4">03/03/2019</div>
+                        <div class="in-line margin col-xs-4">03/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Bristol</div>
-                        <div class="events-tickets in-line margin col-xs-4">-tickets available-</div>
-                        <div class="events-date in-line margin col-xs-4">07/03/2019</div>
+                        <div class="in-line margin col-xs-4">Bristol</div>
+                        <div class="events-tickets in-line margin col-xs-4">-TICKETS AVAILABLE-</div>
+                        <div class="in-line margin col-xs-4">07/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Swansea</div>
-                        <div class="events-tickets in-line margin col-xs-4">-tickets available-</div>
-                        <div class="events-date in-line margin col-xs-4">08/03/2019</div>
+                        <div class="in-line margin col-xs-4">Swansea</div>
+                        <div class="events-tickets in-line margin col-xs-4">-TICKETS AVAILABLE-</div>
+                        <div class="in-line margin col-xs-4">08/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Birmingham</div>
+                        <div class="in-line margin col-xs-4">Birmingham</div>
                         <div class="sold-out in-line margin col-xs-4">-SOLD OUT-</div>
-                        <div class="events-date in-line margin col-xs-4">12/03/2019</div>
+                        <div class="in-line margin col-xs-4">12/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Liverpool</div>
+                        <div class="in-line margin col-xs-4">Liverpool</div>
                         <div class="sold-out in-line margin col-xs-4">-SOLD OUT-</div>
-                        <div class="events-date in-line margin col-xs-4">17/03/2019</div>
+                        <div class="in-line margin col-xs-4">17/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Manchester</div>
+                        <div class="in-line margin col-xs-4">Manchester</div>
                         <div class="sold-out in-line margin col-xs-4">-SOLD OUT-</div>
-                        <div class="events-date in-line margin col-xs-4">18/03/2019</div>
+                        <div class="in-line margin col-xs-4">18/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Leeds</div>
-                        <div class="events-tickets in-line margin col-xs-4">-tickets available-</div>
-                        <div class="events-date in-line margin col-xs-4">20/03/2019</div>
+                        <div class="in-line margin col-xs-4">Leeds</div>
+                        <div class="events-tickets in-line margin col-xs-4">-TICKETS AVAILABLE-</div>
+                        <div class="in-line margin col-xs-4">20/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Glasgow</div>
+                        <div class="in-line margin col-xs-4">Glasgow</div>
                         <div class="sold-out in-line margin col-xs-4">-SOLD OUT-</div>
-                        <div class="events-date in-line margin col-xs-4">21/03/2019</div>
+                        <div class="in-line margin col-xs-4">21/03/2019</div>
                     </li>
                     </br>
                     <li class="events-list-item">
-                        <div class="events-location in-line margin col-xs-4">Edinburgh</div>
-                        <div class="events-tickets in-line margin col-xs-4">-tickets available-</div>
-                        <div class="events-date in-line margin col-xs-4">28/03/2019</div>
+                        <div class="in-line margin col-xs-4">Edinburgh</div>
+                        <div class="events-tickets in-line margin col-xs-4">-TICKETS AVAILABLE-</div>
+                        <div class="in-line margin col-xs-4">28/03/2019</div>
                     </li>
                 </ul>
             </div>
@@ -111,20 +111,20 @@
         <div class="row margin availability-bg form">
             <p class="intro">Complete the short form below if you are interested in booking our services!</p>
             <form action="#" method="post">
-                <label for="name" class="events-intro">Name:</label><br>
+                <label for="name" class="events-intro">Name:</label>
                 <input type="text" name="name" id="name" placeholder="Name" class="form-item" required/><br>
 
-                <label for="email" class="events-intro">Email:</label><br>
+                <label for="email" class="events-intro">Email:</label>
                 <input type="email" name="email" id="email" placeholder="Email" class="form-item" required/><br>
 
-                <label for="details" class="events-intro">Events details (date/time/place):</label><br>
+                <label for="details" class="events-intro">Events details (date / time / place):</label><br/>
                 <textarea rows="5" name="details" class="form-item-details" id="details" placeholder="Details"></textarea></br>
 
-                <input type="submit" value="Submit" class="form-item btn"/>
+                <input type="submit" value="Submit" class="form-item btn" />
             </form>
         </div>
     </section>
-    
+
     <footer>
         <div class="row container-fluid footer-bg-color margin">
             <div class="col-xs-12 col-md-4">
