--- a/our-story.html
+++ b/our-story.html
@@ -38,16 +38,16 @@
         </div>
     </header>
 
-    <section>
+    <section class="our-story-bg">
         <div class="row margin our-story-bg">
             <h2 class="uppercase title-3">Our Story</h2>
         </div>
 
         <div class="row margin our-story-bg">
-            <h3 class="uppercase title-4 margin">First let's see the team</h3>
+            <h3 class="uppercase title-4 added-margin">First let's see the team</h3>
         </div>
 
-        <div class="row margin our-story-bg">
+        <div class="row quotes our-story-bg">
             <div class="col-xs-12 col-md-12 col-lg-6">
                 <div class="media">
                     <div class="media-left">
@@ -108,24 +108,23 @@
         </div>
 
         <div class="row margin our-story-bg">
-            <h3 class="uppercase title-4 margin">Where it all began</h3>
+            <h3 class="uppercase title-4 added-margin">Where it all began</h3>
         </div>
 
-        <div class="row margin our-story-bg">
+        <div class="row margin our-story-bg quotes">
             <p class="our-story-para">
-                <img src="./assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in 1966 in Los Angeleas. Bob Rafelson and Bert Schneider brought us together specifically for the American television series The Monkees. First of all we
-                began in the TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
+                <img src="./assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in 1966 in Los Angeleas. Bob Rafelson and Bert Schneider brought us together specifically for the American television series The Monkees.
+                First of all we began in the TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
             </p>
             <p class="our-story-para">
                 The band continued on until 1971 when it eventually came to an end. <span class="uppercase">until now!</span> We've performed many highly successful reunion concerts but the band is now back together properly.
             </p>
             <p class="our-story-para"> It is with great sadness we inform you that two of the band members have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
-            <div class="row margin our-story-bg">
-                <img src="./assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-                <img src="./assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-            </div>
         </div>
-
+        <div class="row margin our-story-bg">
+            <img src="./assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            <img src="./assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+        </div>
     </section>
 
     <footer>
