--- a/social-media.html
+++ b/social-media.html
@@ -38,26 +38,23 @@
         </div>
     </header>
 
-    <section>
-        <div class="row margin social-media-bg">
+    <section class="social-media-bg">
+        <div class="row margin">
             <h2 class="uppercase title-3">Social media</h2>
         </div>
 
-        <div class="row margin social-media-bg">
+        <div class="row margin added-padding">
             <p class="intro">Click on the links below to check out our diffrent social media accounts and keep up to date on all our latest updates!</p>
         </div>
-        <div class="row margin social-media-bg">
+        <div class="row margin added-padding">
             <ul class="list-inline social-links-page">
-                <li class="col-xs-12 col-sm-12 col-md-4"><a href="#" target="_blank"><i class="fa fa-facebook social-logo fb-logo-bg"></i></a></li>
-                <li class="col-xs-12 col-sm-12 col-md-4"><a href="#" target="_blank"><i class="fa fa-twitter social-logo twitter-logo-bg"></i></a></li>
-                <li class="col-xs-12 col-sm-12 col-md-4"><a href="#" target="_blank"><i class="fa fa-youtube social-logo youtube-logo-bg"></i></a></li>
+                <li class="col-xs-12 col-sm-12 col-md-4"><a href="https://en-gb.facebook.com/TheMonkees/" target="_blank"><i class="fa fa-facebook social-logo fb-logo-bg"></i></a></li>
+                <li class="col-xs-12 col-sm-12 col-md-4"><a href="https://twitter.com/TheMonkees?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="fa fa-twitter social-logo twitter-logo-bg"></i></a></li>
+                <li class="col-xs-12 col-sm-12 col-md-4"><a href="https://www.youtube.com/user/themonkees/playlists" target="_blank"><i class="fa fa-youtube social-logo youtube-logo-bg"></i></a></li>
             </ul>
-            
-            <p class="social-media-para"> Our social media pages are currently under going work but will be live soon! Watch out especially for our BRAND NEW
-            Youtube channel where we may be realeasing some brand new music videos</p>
         </div>
         
-        <div class="row social-media-bg margin">
+        <div class="row margin">
             <img src="./assets/images/our-events.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
             <img src="./assets/images/the-band-4.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
             <img src="./assets/images/the-band-5.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
