readme and footer changes

--- a/our-songs.html
+++ b/our-songs.html
@@ -87,9 +87,9 @@
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">Check out our social media</h5>
                 <ul class="list-inline social-links">
-                    <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://en-gb.facebook.com/TheMonkees/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/TheMonkees?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/user/themonkees/playlists" target="_blank"><i class="fa fa-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
