readme and footer changes

--- a/our-story.html
+++ b/our-story.html
@@ -119,7 +119,7 @@
             <p class="our-story-para">
                 The band continued on until 1971 when it eventually came to an end. <span class="uppercase">until now!</span> We've performed many highly successful reunion concerts but the band is now back together properly.
             </p>
-            <p class="our-story-para"> It is with great sadness we inform you that two of the band members have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
+            <p class="our-story-para group"> It is with great sadness we inform you that two of the band members have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
         </div>
         <div class="row margin our-story-bg">
             <img src="./assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
