--- a/events-availability.html
+++ b/events-availability.html
@@ -111,13 +111,13 @@
         <div class="row margin availability-bg form">
             <p class="intro">Complete the short form below if you are interested in booking our services!</p>
             <form action="#" method="post">
-                <label for="name" class="events-intro">Name:</label>
+                <label for="name" class="events-intro">Name</label>
                 <input type="text" name="name" id="name" placeholder="Name" class="form-item" required/><br>
 
-                <label for="email" class="events-intro">Email:</label>
+                <label for="email" class="events-intro">Email</label>
                 <input type="email" name="email" id="email" placeholder="Email" class="form-item" required/><br>
 
-                <label for="details" class="events-intro">Events details (date / time / place):</label><br/>
+                <label for="details" class="events-intro">Events details (date / time / place)</label><br/>
                 <textarea rows="5" name="details" class="form-item-details" id="details" placeholder="Details"></textarea></br>
 
                 <input type="submit" value="Submit" class="form-item btn" />
